# Deep-Agents

./: pyproject.toml  requirements.txt
DEEPAGENTS/: backends.ipynb  basicdeepagent.ipynb  contextengineering.ipynb  subagents.ipynb
DEEPAGENTS/Projects/: AGENTS.md
