[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude>=0.4.11",
    "deepagents>=0.6.8",
    "groq>=0.4.1,<1.0.0",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.4",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-quickjs>=0.3.0",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
